--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <div class="es-kv__wrapper">
                         <div class="es-kv__left">
                             <h1 class="es-h1">
-                                SODASTREAM<br> Pepsi Cherry, 440&nbsp;ml
+                                SODASTREAM<br> Syrop Pepsi Cherry, 440&nbsp;ml
                             </h1>
                             <p class="es-kv__p">
                                 Domowa, wiśniowa Pepsi – to smak, który zaskoczy Cię mocą orzeźwienia! Napój
